fix(RHINENG-13784): Fix filter chip spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -94,16 +94,10 @@ button.pf-v5-c-button.pf-m-tertiary {
   color: var(--pf-v5-global--warning-color--100);
 }
 
-.ins-c-inventory__list-tags {
-    display: block;
-    position: relative;
-    top: 8px;
-}
-
-button.pf-v5-c-button.pf-m-plain {
-    --pf-v5-c-button--FontSize: var(--pf-v5-c-button--m-link--m-inline--FontSize);
-    padding: 0;
-    text-align: left;
+button[aria-label="Tag count"] {
+  --pf-v5-c-button--FontSize: var(--pf-v5-c-button--m-link--m-inline--FontSize);
+  padding: 0;
+  text-align: left;
 }
 
 button.pf-v5-c-menu-toggle {
